<resources>
    <string name="app_name">警务小秘书（警员版）</string>
    <string name="startlocation">开始定位</string>
    <string name="stoplocation">停止定位</string>
    <string name="title_activity_police_man">PoliceMan</string>
    <string name="title_activity_login">Sign in</string>
    <string name="police_id">警员编号</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="phone">手机号码</string>
    <string name="verification_code">图片验证码</string>
    <string name="send_verification_code">获取图片验证码</string>
    <string name="next_step">下一步</string>
    <string name="name">姓名</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_set_pass_word">Sign in</string>
    <string name="finish">完成</string>
    <string name="set_password">设置密码</string>
    <string name="set_password_again">再次输入密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="drawer_item_compact_header">drawer_item_compact_header</string>
    <string name="drawer_item_compact_header_desc">drawer_item_compact_header_desc</string>
    <string name="drawer_item_section_header">Drawer item</string>
    <string name="forget_password">忘记密码？</string>
    <string name="sms_ver_code">短信验证码</string>
</resources>
