<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.ps.app.ui.activity.ResetPasswordActivity">

    <com.rey.material.widget.EditText
        android:id="@+id/et_reset_phone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawableLeft="@drawable/phone"
        android:hint="@string/phone"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="phone"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="16sp"
        android:drawablePadding="15dp"
        style="@style/DarkEditText"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <com.rey.material.widget.EditText
            android:id="@+id/et_reset_verification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:drawableLeft="@drawable/verification_code"
            android:hint="@string/sms_ver_code"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="16sp"
            android:drawablePadding="15dp"
            android:layout_gravity="bottom"
            style="@style/DarkEditText"

            />

        <com.rey.material.widget.Button
            android:id="@+id/bt_get_verification"
            style="@style/LightRaiseWaveColorButtonRippleStyle"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:text="获取验证码"
            android:textSize="14sp"
            android:background="@color/gray"
            />

    </LinearLayout>

    <com.rey.material.widget.Button
        android:id="@+id/bt_next_step"
        style="@style/LightRaiseWaveColorButtonRippleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginLeft="@dimen/activity_content_margin_left_right"
        android:layout_marginRight="@dimen/activity_content_margin_left_right"
        android:text="@string/next_step"
        android:textStyle="bold"
        android:background="@color/colorAccent"
        />


</LinearLayout>
