<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.activity.RegisterActivity"
    android:background="@color/colorPrimary">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.rey.material.widget.EditText
                android:id="@+id/et_register_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableLeft="@drawable/policeman"
                android:hint="@string/name"
                android:inputType="text"
                android:textSize="16sp"
                android:maxLines="1"
                android:singleLine="true"
                android:drawablePadding="15dp"
                style="@style/DarkEditText"
                />

            <com.rey.material.widget.EditText
                android:id="@+id/et_register_police_id"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableLeft="@drawable/number"
                android:drawableStart="@drawable/number"
                android:hint="@string/police_id"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="16sp"
                android:drawablePadding="15dp"
                style="@style/DarkEditText"
                />

            <com.rey.material.widget.EditText
                android:id="@+id/et_register_phone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableLeft="@drawable/phone"
                android:hint="@string/phone"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="16sp"
                android:drawablePadding="15dp"
                style="@style/DarkEditText"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <com.rey.material.widget.EditText
                    android:id="@+id/et_register_verification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:drawableLeft="@drawable/verification_code"
                    android:hint="@string/sms_ver_code"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="16sp"
                    android:drawablePadding="15dp"
                    android:layout_gravity="bottom"
                    style="@style/DarkEditText"
                    
                    />

                <com.rey.material.widget.Button
                    android:id="@+id/bt_get_verification"
                    style="@style/LightRaiseWaveColorButtonRippleStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="36dp"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:text="获取验证码"
                    android:textSize="14sp"
                    android:background="@color/gray"
                    />

            </LinearLayout>

            <com.rey.material.widget.Button
                android:id="@+id/bt_next_step"
                style="@style/LightRaiseWaveColorButtonRippleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:layout_marginLeft="@dimen/activity_content_margin_left_right"
                android:layout_marginRight="@dimen/activity_content_margin_left_right"
                android:text="@string/next_step"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
