<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".ui.activity.RegisterActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center"
                android:layout_marginTop="56dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_top_margin"
                android:text="警务小秘书"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_top_margin"
                android:text="-警员版-"
                android:textColor="@color/gray"
                android:textSize="14sp" />


            <com.rey.material.widget.EditText
                android:id="@+id/et_login_phone"
                style="@style/DarkEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableLeft="@drawable/phone"
                android:drawablePadding="15dp"
                android:hint="@string/phone"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                >
                <com.rey.material.widget.EditText
                    android:id="@+id/et_login_paw"
                    style="@style/DarkEditText"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="48dp"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="15dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="16sp" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:onClick="resetPassword"
                    android:orientation="vertical"
                    android:gravity="bottom"
                    >
                    <TextView
                        android:id="@+id/et_reset_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="16sp"
                        android:text="@string/forget_password"
                        android:clickable="false"
                        android:textColor="@color/gray_light"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"

                        />
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0.2dip"
                        android:src="#b3ffffff"
                        android:layout_gravity="bottom"

                        />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.rey.material.widget.EditText
                    android:id="@+id/password"
                    style="@style/DarkEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="3"
                    android:drawableLeft="@drawable/verification_code"
                    android:drawablePadding="15dp"
                    android:hint="@string/verification_code"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/bt_get_verification"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="36dp"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    />
            </LinearLayout>

            <com.rey.material.widget.Button
                android:id="@+id/bt_login"
                style="@style/LightRaiseWaveColorButtonRippleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_content_margin_left_right"
                android:layout_marginRight="@dimen/activity_content_margin_left_right"
                android:layout_marginTop="72dp"
                android:background="@color/colorAccent"
                android:text="@string/login"
                android:textStyle="bold" />

            <com.rey.material.widget.Button
                android:id="@+id/bt_register"
                style="@style/LightRaiseWaveColorButtonRippleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_content_margin_left_right"
                android:layout_marginRight="@dimen/activity_content_margin_left_right"
                android:layout_marginTop="@dimen/activity_top_margin"
                android:background="@color/gray"
                android:text="@string/register"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
