<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".ui.activity.RegisterActivity"
              android:background="@color/colorPrimary">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="bottom"
            >

            <com.rey.material.widget.EditText
                android:id="@+id/et_set_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableLeft="@drawable/password"
                android:hint="@string/set_password"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:maxLines="1"
                android:singleLine="true"
                android:drawablePadding="15dp"
                style="@style/DarkEditText"
                />

            <com.rey.material.widget.EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableLeft="@drawable/password"
                android:drawableStart="@drawable/password"
                android:hint="@string/set_password_again"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="16sp"
                android:drawablePadding="15dp"
                style="@style/DarkEditText"
                android:layout_marginTop="12dp"
                />


            <com.rey.material.widget.Button
                android:id="@+id/bt_next_step"
                style="@style/LightRaiseWaveColorButtonRippleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:layout_marginLeft="@dimen/activity_content_margin_left_right"
                android:layout_marginRight="@dimen/activity_content_margin_left_right"
                android:text="@string/finish"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                android:onClick="finish_login"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
